<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    <View
        android:id="@+id/logo"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:background="@drawable/ic_union"
        android:layout_marginStart="84dp"
        android:layout_marginTop="312dp"
        />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="142dp"
            android:layout_marginTop="307dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/photo"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="559dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/pawel_czerwinski1"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="575dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/pawel_czerwinski"
         />
        <View
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="559dp"
            android:background="@drawable/ic_ellipse"
            />
    </FrameLayout>
    <TextView
        android:id="@+id/sign_in"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="33dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:background="@drawable/ic_rectangle"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/register"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="33dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@color/black"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>